Changelog
=========

1.0.2 (unreleased)
------------------

- Nothing changed yet.


1.0.1 (2012-08-07)
------------------

- update integration with new releases


1.0 (2012-07-03)
----------------

- Initial release