@@ -7,6 +7,7 @@
     i18n_domain="collective.portlet.videoanysurfer">
 
     <five:registerPackage package="." initialize=".initialize" />
+    <include package="five.globalrequest" />
 
     <genericsetup:registerProfile
         name="default"
@@ -40,6 +41,11 @@
         class=".videoportlet.TranscriptionView"
         permission="zope2.View"
         />
+
+    <subscriber
+      for="collective.portlet.videoanysurfer.videoportlet.IVideoPortlet
+           zope.lifecycleevent.interfaces.IObjectCreatedEvent"
+      handler=".videoportlet.modify_portlet_handler"/>
 
     <subscriber
       for="collective.portlet.videoanysurfer.videoportlet.IVideoPortlet
