@@ -4,7 +4,8 @@ Changelog
 1.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- force string for caption_format
+- manage add event handler also to download caption from youtube
 
 
 1.0.1 (2012-08-07)
